[package]
name = "PatchOreUI"
version = "1.0.0"
edition = "2021"

[dependencies]
ctor = "0.4.1"
cxx = "1.0.128"
libc = "0.2.159"
ndk = "0.9.0"
ndk-sys = "0.6.0"
plt-rs = "0.3.0"
region = "3.0.2"

[profile.release]
panic = "abort"

[profile.githubci]
inherits = "release"
strip = true
lto = true 
codegen-units = 1 
debug = false
panic = "abort"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.1.24"
